--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,6 @@
 </head>
 
 <body>
-
     <section class="section-container" id="container"></section>
 
     <script type="module" src="main.js"></script>
@@ -35,6 +34,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-firestore-compat.js"></script>
     <!-- Firebase Storage -->
     <script src="https://www.gstatic.com/firebasejs/9.0.2/firebase-storage-compat.js"></script>
+    <!-- Configuracion de firebase -->
     <script type="module" src="firebase/config-firebase.js"></script>
 </body>
 
